# financial-analyst-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.azure/: plan.md
infra/: INFRASTRUCTURE.md  deploy_frontend.sh  index_schema.json  provision.sh  purge_aoai.sh  teardown.sh  validate_frontend.sh
notebooks/: 01_demo_agent.ipynb
scripts/: compare_chunkers.py  download_pdfs.py  run_ingestion.py  run_web_frontend.py
src/: config.py  prompts.py
src/agent/: edges.py  graph.py  state.py
src/agent/nodes/: decompose.py  evaluate.py  format_output.py  refine.py  retrieve.py  synthesize.py
src/ingestion/: embedder.py  indexer.py  pdf_parser.py  pipeline.py
src/ingestion/chunking/: __init__.py  base_chunker.py  fixed_size_chunker.py  hierarchical_chunker.py  semantic_chunker.py
src/retrieval/: search_client.py
src/web_frontend/: __init__.py  app.py
src/web_frontend/static/: app.js  style.css
src/web_frontend/templates/: index.html
tests/: test_agent_graph.py  test_chunkers.py
